[package]
name = "get_prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dateparser = "0.2.1"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["blocking"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
